--- a/environment/env1.ipynb
+++ b/environment/env1.ipynb
@@ -5,21 +5,7 @@
    "id": "d1c038d5-e1bf-40e7-8b79-a9d1da1ba6a2",
    "metadata": {},
    "source": [
-    "Establish environment by installing any packages needed and define imports and extensions.  Record all packages in a yaml file.  This could be handled by setting up a conda enviroment:\n",
-    "\n",
-    "##### check conda version\n",
-    "    !conda --version\n",
-    "\n",
-    "##### install conda colab\n",
-    "    !pip install -q condacolab<br>\n",
-    "    import condacolab<br>\n",
-    "    condacolab.install()\n",
-    "\n",
-    "##### record environment in yaml file\n",
-    "    !conda env export > env1.yml\n",
-    "\n",
-    "##### to set up conda env based on yaml:\n",
-    "    https://github.com/conda-incubator/condacolab\n"
+    "Establish environment by installing any packages needed and define imports and extensions.  Record all packages in a yaml file."
    ]
   },
   {
