--- a/etl/dataAHRQCountySDOH.ipynb
+++ b/etl/dataAHRQCountySDOH.ipynb
@@ -143,9 +143,7 @@
    "metadata": {},
    "source": [
     "### Missing values\n",
-    "Remove columns missing more than 30%.  Then impute missing data using KNN imputation.   Data set has many dimensions (about 1000) and comparably low data (about 3000).\n",
-    "Remove sparse columns.  KNN imputation may not work well with this shape.\n",
-    "May need to review all dimensions."
+    "Remove columns missing more than 30%.  Then impute missing data using KNN imputation."
    ]
   },
   {
