--- a/features/features_RandomForestReg.ipynb
+++ b/features/features_RandomForestReg.ipynb
@@ -119,10 +119,7 @@
     "selected_feat_list = list(selected_feat)\n",
     "\n",
     "def out_features_RandomForestReg_X():\n",
-    "   return selected_feat_list\n",
-    "\n",
-    "def out_features_RandomForestReg_X_R2():\n",
-    "   return r2_score(parm_features_RandomForestReg_Y, Y_pred)"
+    "   return selected_feat_list"
    ]
   },
   {
