--- a/environment/env1.ipynb
+++ b/environment/env1.ipynb
@@ -31,12 +31,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import RocCurveDisplay\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.utils import shuffle\n",
     "\n",
     "# warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
