--- a/features/features_RandomForestReg.ipynb
+++ b/features/features_RandomForestReg.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "# Feature Selection using Random Forest Regression. \n",
+    "# Feature Selection using Random Forest Regression \n",
     "\n",
     "Input parameters:\n",
     "- parm_features_RandomForestReg_X: features dataframe\n",
