--- a/LLM Classification/classification_using_different_prompts.ipynb
+++ b/LLM Classification/classification_using_different_prompts.ipynb
@@ -3155,7 +3155,7 @@
       "source": [
         "test_count = 400\n",
         "model_name  = \"microsoft/Phi-3-medium-4K-instruct\"\n",
-        "access_token = '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'\n",
+        "access_token = 'place token here'\n",
         "#prompt_function = 'create_dreaddit_prompt'\n",
         "prompt_function = 'create_examples_prompt'\n",
         "rows_per_set = 2"
